test/files/neg/t6120.check
t6120.scala:14: warning: method bippy in class BooleanOps is deprecated (since 2.11.0): bobo
  def f = (null == null).bippy
                         ^
t6120.scala:14: warning: deprecated method bippy in class BooleanOps has changed semantics in version 2.12.6:
Used to return 5
  def f = (null == null).bippy
                         ^
t6120.scala:14: warning: comparing values of types Null and Null using `==` will always yield true
  def f = (null == null).bippy
                ^
t6120.scala:15: warning: method bippy in class BooleanOps is deprecated (since 2.11.0): bobo
  def g = true.bippy
               ^
t6120.scala:15: warning: deprecated method bippy in class BooleanOps has changed semantics in version 2.12.6:
Used to return 5
  def g = true.bippy
               ^
error: No warnings can be incurred under -Werror.
5 warnings
1 error
